# MCStatusX

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-public.yml
src/mcstatusx/: __init__.py  bedrock.py  cli.py  client.py  errors.py  mcstatusx.py  models.py  srv.py
